[workspace]
default-members = ["packages/corgi"]
members = ["packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Corgi.Media"]
license = "GPL-3.0"

[workspace.dependencies]
corgi-types = { path = "packages/corgi-types" }
corgi-database = { path = "packages/corgi-database" }
corgi-core = { path = "packages/corgi-core" }
corgi-server = { path = "packages/corgi-server" }

tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
http = "1.3.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["trace"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v7"] }
chrono = "0.4.40"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
rand_core = "0.6.4"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "rand_core"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
garde = { version = "0.22.0", features = ["full"] }
sysinfo = "0.33.1"
strum = { version = "0.27", features = ["derive"] }
walkdir = { version = "2.5.0" }
